[Add] DTO 추가 230511 1755

--- a/BackEnd/SpringBoot/EnjoyTrip_송혁준_신창학/bin/src/main/resources/application.properties
+++ b/BackEnd/SpringBoot/EnjoyTrip_송혁준_신창학/bin/src/main/resources/application.properties
@@ -9,5 +9,17 @@ spring.datasource.url=jdbc:mysql://localhost:3306/enjoytrip?serverTimezone=UTC&u
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
-mybatis.type-aliases-package=com.ssafy.*.model 
+# mapper setting
+
+
+#mybatis
+mybatis.config-location=classpath:mybatis-config.xml
+mybatis.type-aliases-package=com.enjoy.trip.dto
 mybatis.mapper-locations=mapper/*.xml
+
+file upload setting
+file.path=c:\\springboot\\upload
+file.imgPath=c:\\springboot\\img
+
+#\uD30C\uC77C \uC0AC\uC774\uC988
+spring.servlet.multipart.max-file-size=25MB
