--- a/BackEnd/SpringBoot/EnjoyTrip_송혁준_신창학/bin/pom.xml
+++ b/BackEnd/SpringBoot/EnjoyTrip_송혁준_신창학/bin/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>PJ0427_BOOT</artifactId>
+	<artifactId>PJ0501_BOOT</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>PJ0427_BOOT</name>
+	<name>EnjoyTrip</name>
 	<description>test</description>
 	<properties>
 		<java.version>1.8</java.version>
