--- a/FrontEnd/vue_0517/package.json
+++ b/FrontEnd/vue_0517/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "i": "^0.3.7",
+    "jwt-decode": "^3.1.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
