--- a/FrontEnd/vue_0517/package.json
+++ b/FrontEnd/vue_0517/package.json
@@ -12,11 +12,13 @@
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.7",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
