--- a/FrontEnd/vue_0517/package.json
+++ b/FrontEnd/vue_0517/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "0515_vuex-test",
+  "name": "ShinAndSong",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,6 +18,7 @@
     "moment": "^2.29.4",
     "npm": "^9.6.7",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
