--- a/BackEnd/SpringBoot/EnjoyTrip_송혁준_신창학/pom.xml
+++ b/BackEnd/SpringBoot/EnjoyTrip_송혁준_신창학/pom.xml
@@ -62,7 +62,13 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
-
+		
+		<!-- JAVA 11 -->
+		<dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
 	</dependencies>
 
 
